--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -9,7 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="//datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
-		<!--script>
+		<script>
 var map = new Datamap({
 
         scope: 'world',
@@ -60,7 +60,7 @@ var map = new Datamap({
         }
       });
 
-  </script-->
+  </script>
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
