--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -6,66 +6,17 @@
   <body>
 
     {% include header.html %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="//datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
-		<script>
-var map = new Datamap({
-
-        scope: 'world',
-         element: document.getElementById('container'),
-
-        projection: 'mercator',
-        height: 600,
-        width: 700,
-        fills: {
-          havebeen: '#C70039',
-          wanttogo: '#581845',
-          havelived: '#FF5733'
-        },
-
-        
-        data: {
-          CHN: {fillKey: 'havelived' },     // China
-          HKG: {fillKey: 'havebeen' },     // HK
-          MAC: {fillKey: 'havebeen' },     // Macao
-          USA: {fillKey: 'havelived' },     // USA
-          KOR: {fillKey: 'wanttogo' },  // Korea
-          SGP: {fillKey: 'wanttogo' },  // Singapore
-          IND: {fillKey: 'wanttogo' },  // India
-          CAN: {fillKey: 'wanttogo' },  // Canada
-          AUS: {fillKey: 'wanttogo' },  // Austraila
-          NZL: {fillKey: 'wanttogo' },  // New Zealand
-          JPN: {fillKey: 'havebeen' },     // Japan
-          AUT: {fillKey: 'havebeen' },     // Austria
-          BEL: {fillKey: 'havebeen' },     // Belgium
-          CHE: {fillKey: 'havebeen' },     // Switzerland
-          DEU: {fillKey: 'havebeen' },     // Germany
-          DNK: {fillKey: 'havebeen' },     // Denmark
-          ITA: {fillKey: 'havebeen' },     // Italy
-          SPN: {fillKey: 'wanttogo' },  // Spain
-          GRC: {fillKey: 'wanttogo' },  // Greece
-          FRA: {fillKey: 'havebeen' },     // France
-          NLD: {fillKey: 'havebeen' },     // Netherlands
-          NOR: {fillKey: 'havebeen' },     // Norway
-          SWE: {fillKey: 'havebeen' },     // Sweden
-          FIN: {fillKey: 'havebeen' },     // Finnland
-          ISL: {fillKey: 'havebeen' },     // Iceland
-          GBR: {fillKey: 'wanttogo' },  // UK
-          BRA: {fillKey: 'wanttogo' },  // Brazil
-          CRI: {fillKey: 'wanttogo' },  // Costa Rica
-          PRI: {fillKey: 'wanttogo' },  // Puerto Reco
-          ZAF: {fillKey: 'wanttogo' },  // South Africa
-          QAT: {fillKey: 'havebeen' },     // Qatar
-        }
-      });
-
-  </script>
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+        <div id="container" style="position: relative; width: 100%;"></div>
       </div>
     </div>
+    {% include mapjs.html %}
 
     {% include footer.html %}
 
