--- a/style.css
+++ b/style.css
@@ -1,40 +1,269 @@
-body {
-	margin: 0;
-	border: 0;
-	font-family: 'Roboto';
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 400;
+    color: #222222;
+    line-height: 1; }
+h1 {
+    font-size: 4.5rem;
+    margin-bottom: 0;
+    margin-top: 0; }
+h2 {
+    font-size: 2em;
+    padding: 1rem;
+    margin: 0 0 0 0;
+    font-weight: 300; }
+h3 {
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 0 }
+h6 {
+    font-size: 1rem; }
+
+body, html {
+    width: 100%;
+    height: 100%;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 16px;
+    color: #222222; }
+
+
+a, a:hover {
+    color: inherit;
+    text-decoration: none;  }
+
+ul {
+    margin: 0;
+    padding-left: 2rem; }
+
+ul li {
+    padding: .5rem;
+    font-weight: 200;
+    line-height: 1rem; }
+
+ul a {
+    font-weight: bold;  }
+
+p {
+    margin: 1rem 0;
+    font-weight: 200;
+    line-height: 1.5; }
+
+.content {
+    max-width: 60rem;
+    margin: 0 auto;
+    width: 100%; }
+
+.navbar .content p {
+    font-weight: bold; }
+
+.content a {
+    font-weight: bold; }
+
+.header {
+    position: relative;
+    overflow: hidden;
+    height: 30rem;
+    background-color: #FFFFFF;
+    text-decoration: #000000;}
+
+section {
+    padding-bottom: 0rem; }
+
+footer {
+    margin-top: 4rem;
+    padding: 5rem;
+    background-color: #222222;
+    color: white;
+    text-align: center; }
+footer p {
+    margin: 0; }
+
+nav {
+    height: 3rem;
+    position: relative;
+    width: 100%; }
+
+nav ul {
+    height: 3rem;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    font-size: 0;
+    list-style: none; }
+
+nav ul li {
+    font-size: 1rem;
+    padding: 0;
+    display: inline-block;
+    padding-right: 1em;
+    padding-left: 1em;
+}
+
+nav ul li p {
+    height: 1.5rem;
+    line-height: 1.5rem;
+    margin: 0;
+    padding: 0.75rem 1.5rem; }
+
+.nav-scrolled {
+
+}
+
+nav ul li:hover {
+    cursor: pointer;
+    color: black;
+    /*background-color: #5a4557; */
+}
+
+nav ul li.action-item {
+    color: black;
+    /*background-color: #5a4557; */
+}
+
+nav ul li.action-item:hover {
+    color: white;
+    background-color: black; }
+
+nav ul.right { float:right; }
+
+
+body, html {
+    height: 100%;
+    margin: 0 0 0 0;
+}
+
+nav {
+	position: relative;
+    text-align: center;
+    width: 100%;
+    top: 0;
+}
+
+div.header {
+	height: 100%;
+}
+
+.content{
+    top: 0;
+    z-index: 1 ;
+    background-color: white;
+    transition: 0.2s ease background-color;
+}
+
+.navbar {
+    height: 3rem;
+}
+
+.header {
+	top:0;
+    background-color: #5a4557;
+    cursor: default;
+    background-image: url("meblur.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 0px 0px 0px;
+    z-index: 1;
+}
+
+.header h1 {
+    position: relative;
+    z-index: 100;
+    text-align: center;
+    color: #FFFFFF;
+    font-weight: 600;
+    padding-top: 13rem;
+}
+
+h6 {
+    position: relative;
+    text-align: center;
+    color: white;
+    z-index: 100;
+}
+
+.inner {
+	display: inline-block;
+	opacity: 0;
+	padding: 3rem;
 	text-align: center;
+	background-color: #5a4557;
+	position: relative;
+	border-bottom: solid 2px;
+	border-top: solid 2px;
+	margin: 0 0 2em 0;
+	padding: 3px 0 3px 0;
+	z-index: 100;
 }
 
-#box1 {
-	width: 100%;
-	height: 500px;
-	background-color: #64FFDA;
-	opacity: 0.8;
-	text-align: center;
+.img-circular {
+    position: absolute;
+    top: 400%;
+    left: 50%;
+    /*background-image: url("avatar.jpg");*/
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    transform: translate(-50%, -50%);
+    background-size: cover;
 }
 
-#text {
-	position: absolute;
-	top: 250px;
-	vertical-align: middle;
-	margin-left: 36%;
-	font-size: 60pt;
+.favicons {
+    position: relative;
+    text-align: center;
+    color: white;
+    font-size: 1.5rem;
+    margin-left: -40px;
+    line-height: 1;
+    z-index: 2;
+
 }
 
-#box2 {
-	position: absolute;
-	top: 400px;
-	width: 100%;
-	height: 100px;
+.favicons li {
+    display: inline;
+    color: white;
+    padding: 0px 10px;
+    font-size: 2rem;
 }
 
-#avatar {
-	width: 200px;
-	height: 200px;
-	border-radius: 100px;
+.arrow {
+    position: relative;
+    text-align: center;
+    color: white;
+    font-size: 2rem;
+    padding-top: 5rem;
+    z-index: 2;
 }
 
-#box3 {
-	position: absolute;
-	top: 610px;
+.content a, b {
+    font-weight: 400;
 }
+
+.content li a{
+    font-weight: bold;
+}
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.2);
+}
+
+}
+
+html,body,div,span,applet,object,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:base
+e;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style: none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
