added a few blogs, working on piechart now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/blogs">Blogs</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/project">Project</a>
           </nav>
         </header>
       </div>
